--- a/index.html
+++ b/index.html
@@ -3,205 +3,338 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Witham HC | Live Scoreboard</title>
+    <title>Witham HC | Match Centre</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800;900&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --witham-green: #004d2c;
-            --witham-gold: #ffcc00;
-            --bg-gray: #f0f2f5;
+            --witham-gold: #ffc000;
+            --witham-black: #1a1a1a;
+            --bg-light: #f8f9fa;
         }
 
         body {
-            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-            background-color: var(--bg-gray);
+            font-family: 'Inter', sans-serif;
+            background-color: var(--bg-light);
             margin: 0;
-            padding: 20px;
-            color: #1c1e21;
+            padding: 0;
+            color: var(--witham-black);
+            overflow-x: hidden;
         }
 
         header {
-            text-align: center;
-            margin-bottom: 30px;
-            border-bottom: 4px solid var(--witham-green);
-            padding-bottom: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background: white;
+            padding: 10px 40px;
+            border-bottom: 6px solid var(--witham-gold);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
         }
 
-        h1 { color: var(--witham-green); margin: 0; text-transform: uppercase; letter-spacing: 1px; }
-
-        /* Main Grid Layout */
-        .main-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr 300px; /* Three columns */
-            gap: 25px;
-            max-width: 1400px;
-            margin: 0 auto;
+        .header-logo img { height: 75px; width: auto; }
+        .header-title h1, .column-title h2 {
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 900;
+            color: var(--witham-black);
+            text-transform: uppercase;
+            letter-spacing: -1.5px;
+            margin: 0;
         }
+        .header-title h1 { font-size: 2.4rem; }
+
+        .header-clock { text-align: right; }
+        #clock { font-family: 'Montserrat', sans-serif; font-size: 2rem; font-weight: 900; line-height: 1; }
+        #date { font-size: 0.9rem; font-weight: 700; color: #777; text-transform: uppercase; }
 
         .column-title {
-            font-size: 1.2rem;
-            color: var(--witham-green);
-            border-bottom: 2px solid var(--witham-green);
-            padding-bottom: 8px;
             margin-bottom: 20px;
-            text-align: center;
-            font-weight: 800;
+            padding-bottom: 8px;
+            border-bottom: 4px solid var(--witham-gold);
+            display: inline-block;
+            width: 100%;
+        }
+        .column-title h2 { font-size: 1.5rem; letter-spacing: -1px; }
+
+        .main-container {
+            display: grid;
+            grid-template-columns: 1.1fr 1.1fr 0.8fr;
+            gap: 25px;
+            padding: 25px;
+            width: 100%;
+            box-sizing: border-box;
         }
 
-        /* Responsive: Stack columns on smaller screens */
-        @media (max-width: 1000px) {
-            .main-container { grid-template-columns: 1fr; }
-            .info-column { order: -1; } /* Clock/Weather at top on mobile */
-        }
-
-        /* Card Styling */
+        /* Fixture Cards */
         .card {
             background: white;
-            border-radius: 8px;
-            padding: 15px;
+            border-radius: 12px;
+            padding: 20px;
             margin-bottom: 15px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.08);
-            border-left: 6px solid var(--witham-green);
+            box-shadow: 0 6px 15px rgba(0,0,0,0.04);
+            border-left: 8px solid var(--witham-gold);
             position: relative;
         }
 
-        .live-badge {
-            position: absolute; top: 10px; right: 10px;
-            background: #d93025; color: white;
-            padding: 2px 8px; border-radius: 4px;
-            font-size: 0.7rem; font-weight: bold; animation: blink 1s infinite;
+        .card-header-row {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 12px;
         }
-        @keyframes blink { 50% { opacity: 0; } }
 
-        .team-row { display: flex; justify-content: space-between; margin: 8px 0; font-size: 1rem; }
-        .score { font-weight: 800; font-size: 1.2rem; width: 30px; text-align: center; background: #f8f9fa; border-radius: 4px; }
-        .status-bar { font-size: 0.8rem; text-align: center; margin-top: 10px; color: #65676b; font-weight: 600; text-transform: uppercase; }
+        .division { font-size: 0.8rem; color: #888; font-weight: 800; text-transform: uppercase; }
 
-        /* Right Column Widgets */
-        .widget {
-            background: white; border-radius: 8px; padding: 20px;
-            margin-bottom: 20px; box-shadow: 0 2px 4px rgba(0,0,0,0.08);
+        .live-badge {
+            background: #d93025; color: white;
+            padding: 3px 12px; border-radius: 20px;
+            font-size: 0.75rem; font-weight: 900;
+            text-transform: uppercase;
+            animation: slowBreathe 3s ease-in-out infinite;
+        }
+
+        @keyframes slowBreathe {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.4; }
+        }
+
+        .score-row {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 15px;
+        }
+
+        .team-name { font-weight: 800; font-size: 1.4rem; color: #111; flex: 1; line-height: 1.1; }
+        .team-name.home { text-align: right; }
+
+        .score-pod {
+            background: var(--witham-gold);
+            color: var(--witham-black);
+            font-family: 'Montserrat', sans-serif;
+            font-size: 2rem;
+            font-weight: 900;
+            padding: 5px 20px;
+            border-radius: 50px;
+            min-width: 85px;
             text-align: center;
         }
 
-        #clock { font-size: 2rem; font-weight: bold; color: var(--witham-green); }
-        #date { font-size: 1rem; color: #65676b; margin-bottom: 10px; }
+        .status-footer { 
+            font-size: 1rem; font-weight: 800; text-align: center; 
+            margin-top: 15px; color: #444; text-transform: uppercase;
+        }
 
-        .ad-placeholder {
-            background: #e4e6eb; border: 2px dashed #b0b3b8;
-            height: 250px; display: flex; align-items: center;
-            justify-content: center; color: #65676b; font-style: italic;
+        /* SIMPLIFIED WEATHER WIDGET */
+        .weather-card {
+            background: white;
+            color: var(--witham-black);
+            border-radius: 12px;
+            padding: 20px;
+            text-align: center;
+            box-shadow: 0 6px 15px rgba(0,0,0,0.04);
+            border: 1px solid #eee;
+        }
+        .weather-main { display: flex; align-items: center; justify-content: center; gap: 10px; margin: 10px 0; }
+        .weather-temp { font-size: 3rem; font-weight: 900; font-family: 'Montserrat'; }
+        .weather-icon { font-size: 3rem; }
+        .weather-desc { font-weight: 800; text-transform: uppercase; font-size: 1rem; color: #555; display: block; }
+        .weather-details { 
+            display: flex; 
+            justify-content: center; 
+            gap: 15px;
+            margin-top: 10px; 
+            padding-top: 10px; 
+            border-top: 1px solid #f0f0f0; 
+            font-size: 0.85rem; 
+            font-weight: 700;
+            color: #777;
+        }
+
+        .widget { background: white; border-radius: 12px; padding: 20px; margin-bottom: 25px; box-shadow: 0 6px 15px rgba(0,0,0,0.04); }
+        
+        .carousel-container {
+            width: 100%; height: 300px;
+            position: relative; border-radius: 8px;
+            overflow: hidden; background: #eee;
+        }
+        .carousel-slide {
+            position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+            opacity: 0; transition: opacity 0.8s ease-in-out;
+            background-size: contain; background-repeat: no-repeat; background-position: center;
+            display: flex; align-items: flex-end;
+        }
+        .carousel-slide.active { opacity: 1; }
+        .slide-caption { background: rgba(0,0,0,0.7); color: white; padding: 12px; width: 100%; text-align: center; font-weight: 600; font-size: 0.9rem; }
+
+        @media (max-width: 1200px) {
+            .main-container { grid-template-columns: 1fr; }
+            header { flex-direction: column; text-align: center; padding: 20px; }
         }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>Witham Hockey Club | Match Centre</h1>
+    <div class="header-logo">
+        <img src="https://raw.githubusercontent.com/KilobyteGamer/WHC-Results/refs/heads/main/WHC_Eagle.png" alt="Witham HC Logo">
+    </div>
+    <div class="header-title">
+        <h1>Match Centre</h1>
+    </div>
+    <div class="header-clock">
+        <span id="clock">00:00</span>
+        <span id="date">Loading...</span>
+    </div>
 </header>
 
 <div class="main-container">
     <div class="column">
-        <div class="column-title">MENS SECTION</div>
-        <div id="mens-scores">Loading...</div>
+        <div class="column-title"><h2>Mens Fixtures</h2></div>
+        <div id="mens-scores"></div>
     </div>
 
     <div class="column">
-        <div class="column-title">LADIES SECTION</div>
-        <div id="ladies-scores">Loading...</div>
+        <div class="column-title"><h2>Ladies Fixtures</h2></div>
+        <div id="ladies-scores"></div>
     </div>
 
-    <div class="info-column">
-        <div class="widget">
-            <div id="clock">00:00</div>
-            <div id="date">Date</div>
-            <hr>
-            <a class="weatherwidget-io" href="https://forecast7.com/en/51_800_0_64/witham/" data-label_1="WITHAM" data-label_2="WEATHER" data-theme="pure" >WITHAM WEATHER</a>
-            <script>
-            !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-            </script>
+    <div class="column">
+        <div class="column-title"><h2>Weather</h2></div>
+        <div id="weather-container">
+            <div class="weather-card">
+                <div class="weather-loc">Checking Witham sky...</div>
+            </div>
         </div>
 
-        <div class="widget">
-            <div class="column-title" style="font-size: 0.9rem;">UPCOMING EVENTS</div>
-            <div class="ad-placeholder">
-                <p>Space for Adverts / <br>Upcoming Events</p>
+        <div class="widget" style="margin-top: 25px;">
+            <div class="column-title"><h2>Club News</h2></div>
+            <div class="carousel-container" id="carousel">
+                <div class="carousel-slide active" style="background-image: url('https://raw.githubusercontent.com/KilobyteGamer/WHC-Results/refs/heads/main/WHC_Eagle.png'); background-color: #fff;">
+                    <div class="slide-caption">Welcome to Witham Hockey Club</div>
+                </div>
+                <div class="carousel-slide" style="background-image: url('https://via.placeholder.com/400x300/ffc000/000000?text=Quiz+Night');">
+                    <div class="slide-caption">Next Social Event: Quiz Night</div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-<div id="debug-log" style="display:none;"></div>
-
 <script>
     const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbycpvfVi8Yd3Us0Fp84SON-wyxN0NL6b_3adE-cnYoomk0Cb0IsuPt2tF9RjdScB_TN/exec';
 
+    // 1. IMPROVED WEATHER LOGIC
+    function getWeatherIcon(code) {
+        // WMO Weather interpretation codes
+        if (code === 0) return '☀️'; // Clear sky
+        if (code <= 3) return '⛅';  // Partly cloudy
+        if (code <= 48) return '☁️'; // Fog/Cloudy
+        if (code <= 67) return '🌧️'; // Rain/Drizzle
+        if (code <= 77) return '❄️'; // Snow
+        if (code <= 82) return '🌦️'; // Showers
+        if (code <= 99) return '⛈️'; // Thunderstorm
+        return '☁️';
+    }
+
+    function getWeatherDesc(code) {
+        if (code === 0) return 'Clear Sky';
+        if (code <= 3) return 'Partly Cloudy';
+        if (code <= 48) return 'Overcast';
+        if (code <= 67) return 'Rainy';
+        if (code <= 82) return 'Showers';
+        return 'Stormy';
+    }
+
+    async function updateWeather() {
+        try {
+            const response = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=51.8033&longitude=0.6386&current_weather=true&timezone=Europe%2FLondon`);
+            const data = await response.json();
+            const w = data.current_weather;
+            
+            const container = document.getElementById('weather-container');
+            container.innerHTML = `
+                <div class="weather-card">
+                    <span class="weather-desc">${getWeatherDesc(w.weathercode)}</span>
+                    <div class="weather-main">
+                        <span class="weather-icon">${getWeatherIcon(w.weathercode)}</span>
+                        <span class="weather-temp">${Math.round(w.temperature)}°C</span>
+                    </div>
+                    <div class="weather-details">
+                        <span>Wind: ${Math.round(w.windspeed * 0.621371)} mph</span>
+                        <span>|</span>
+                        <span>Witham, Essex</span>
+                    </div>
+                </div>
+            `;
+        } catch (e) { console.error("Weather update failed", e); }
+    }
+    updateWeather();
+    setInterval(updateWeather, 600000);
+
+    // 2. CAROUSEL LOGIC
+    let currentSlide = 0;
+    function rotateCarousel() {
+        const slides = document.querySelectorAll('.carousel-slide');
+        if(slides.length < 2) return;
+        slides[currentSlide].classList.remove('active');
+        currentSlide = (currentSlide + 1) % slides.length;
+        slides[currentSlide].classList.add('active');
+    }
+    setInterval(rotateCarousel, 5000);
+
+    // 3. CLOCK LOGIC
     function updateDateTime() {
         const now = new Date();
         document.getElementById('clock').textContent = now.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
-        document.getElementById('date').textContent = now.toLocaleDateString([], {weekday: 'long', day: 'numeric', month: 'long'});
+        document.getElementById('date').textContent = now.toLocaleDateString([], {weekday: 'long', day: 'numeric', month: 'short'});
     }
-    setInterval(updateDateTime, 1000);
+    setInterval(updateDateTime, 1000); 
     updateDateTime();
 
+    // 4. DATA LOGIC
     function handleData(data) {
-        const mensContainer = document.getElementById('mens-scores');
-        const ladiesContainer = document.getElementById('ladies-scores');
-        mensContainer.innerHTML = '';
-        ladiesContainer.innerHTML = '';
+        const mens = document.getElementById('mens-scores');
+        const ladies = document.getElementById('ladies-scores');
+        mens.innerHTML = ''; ladies.innerHTML = '';
 
         for (let col = 0; col < 7; col++) {
-            const showMatch = data[0][col];
-            if (showMatch !== true && showMatch !== "TRUE") continue;
+            if (data[0][col] !== true && data[0][col] !== "TRUE") continue;
 
-            const pb = data[1][col];
-            const status = data[2][col];
-            const team1 = data[3][col];
-            const team2 = data[4][col];
-            const s1 = data[5][col] ?? '-';
-            const s2 = data[6][col] ?? '-';
-            const div = data[7][col];
+            const [pb, status, team1, team2, s1, s2, div] = [data[1][col], data[2][col], data[3][col], data[4][col], data[5][col] ?? '0', data[6][col] ?? '0', data[7][col]];
+            const isLadies = team1.toLowerCase().includes(' l') || team1.includes('Ladies');
 
-            // Determine if team is Ladies (L) or Mens (M)
-            const isLadies = team1.toLowerCase().includes(' L') || team1.includes('Ladies');
-
-            let isLive = false;
+            let isPlaying = false;
             if (status === "TBD") {
                 const now = new Date();
                 const [hrs, mins] = pb.split(':');
-                const matchTime = new Date();
-                matchTime.setHours(hrs, mins, 0);
-                const endTime = new Date(matchTime.getTime() + (90 * 60000));
-                if (now >= matchTime && now <= endTime) isLive = true;
+                const matchTime = new Date(); matchTime.setHours(hrs, mins, 0);
+                if (now >= matchTime && now <= new Date(matchTime.getTime() + 90*60000)) isPlaying = true;
             }
 
             const card = document.createElement('div');
             card.className = 'card';
             card.innerHTML = `
-                ${isLive ? '<div class="live-badge">LIVE</div>' : ''}
-                <div class="division">${div}</div>
-                <div class="team-row"><span>${team1}</span><span class="score">${status === 'Cancelled' ? '-' : s1}</span></div>
-                <div class="team-row"><span>${team2}</span><span class="score">${status === 'Cancelled' ? '-' : s2}</span></div>
-                <div class="status-bar">${status === 'TBD' ? 'PB: ' + pb : status}</div>
+                <div class="card-header-row">
+                    <div class="division">${div}</div>
+                    ${isPlaying ? '<div class="live-badge">Playing</div>' : '<div></div>'}
+                </div>
+                <div class="score-row">
+                    <div class="team-name home">${team1}</div>
+                    <div class="score-pod">${status.includes('Post') || status.includes('Canc') ? '-' : s1 + ' - ' + s2}</div>
+                    <div class="team-name">${team2}</div>
+                </div>
+                <div class="status-footer">${status === 'TBD' ? 'Pushback: ' + pb : status}</div>
             `;
-
-            if (isLadies) {
-                ladiesContainer.appendChild(card);
-            } else {
-                mensContainer.appendChild(card);
-            }
+            (isLadies ? ladies : mens).appendChild(card);
         }
     }
 
     function refreshData() {
-        const oldScript = document.getElementById('data-script');
-        if (oldScript) oldScript.remove();
         const script = document.createElement('script');
-        script.id = 'data-script';
         script.src = `${WEB_APP_URL}?callback=handleData&ts=${Date.now()}`;
         document.body.appendChild(script);
     }
-
-    refreshData();
+    refreshData(); 
     setInterval(refreshData, 60000);
 </script>
 </body>
