--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             justify-content: space-between;
             align-items: center;
             background: white;
-            padding: 10px 40px;
+            padding: 10px 25px;
             border-bottom: 6px solid var(--witham-gold);
             box-shadow: 0 4px 12px rgba(0,0,0,0.05);
         }
@@ -40,38 +40,47 @@
             letter-spacing: -1.5px;
             margin: 0;
         }
-        .header-title h1 { font-size: 2.4rem; }
+        .header-title h1 { font-size: 2.2rem; }
 
-        .header-clock { text-align: right; }
-        #clock { font-family: 'Montserrat', sans-serif; font-size: 2rem; font-weight: 900; line-height: 1; }
-        #date { font-size: 0.9rem; font-weight: 700; color: #777; text-transform: uppercase; }
+        /* Clock Element - Date beneath Time */
+        .header-clock { text-align: right; display: flex; flex-direction: column; justify-content: center; }
+        #clock { font-family: 'Montserrat', sans-serif; font-size: 2.2rem; font-weight: 900; line-height: 1; }
+        #date { font-size: 0.9rem; font-weight: 800; color: #666; text-transform: uppercase; margin-top: 4px; }
 
         .column-title {
             margin-bottom: 20px;
-            padding-bottom: 8px;
-            border-bottom: 4px solid var(--witham-gold);
-            display: inline-block;
+            padding-bottom: 10px;
+            border-bottom: 5px solid var(--witham-gold);
+            display: block;
             width: 100%;
         }
-        .column-title h2 { font-size: 1.5rem; letter-spacing: -1px; }
+        .column-title h2 { font-size: 1.6rem; letter-spacing: -1px; }
 
+        /* Desktop Grid */
         .main-container {
             display: grid;
             grid-template-columns: 1.1fr 1.1fr 0.8fr;
-            gap: 25px;
-            padding: 25px;
+            gap: 30px;
+            padding: 30px;
             width: 100%;
             box-sizing: border-box;
+        }
+
+        /* Mobile Fix */
+        @media (max-width: 1000px) {
+            .main-container { grid-template-columns: 1fr; padding: 15px; }
+            .header-title h1 { font-size: 1.6rem; }
+            .header-logo img { height: 55px; }
         }
 
         /* Fixture Cards */
         .card {
             background: white;
             border-radius: 12px;
-            padding: 20px;
-            margin-bottom: 15px;
-            box-shadow: 0 6px 15px rgba(0,0,0,0.04);
-            border-left: 8px solid var(--witham-gold);
+            padding: 22px;
+            margin-bottom: 20px;
+            box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+            border-left: 10px solid var(--witham-gold);
             position: relative;
         }
 
@@ -79,24 +88,22 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 12px;
+            margin-bottom: 15px;
         }
 
-        .division { font-size: 0.8rem; color: #888; font-weight: 800; text-transform: uppercase; }
+        .division { font-size: 0.85rem; color: #777; font-weight: 900; text-transform: uppercase; }
 
         .live-badge {
             background: #d93025; color: white;
-            padding: 3px 12px; border-radius: 20px;
-            font-size: 0.75rem; font-weight: 900;
+            padding: 4px 12px; border-radius: 20px;
+            font-size: 0.8rem; font-weight: 900;
             text-transform: uppercase;
             animation: slowBreathe 3s ease-in-out infinite;
         }
 
-        @keyframes slowBreathe {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.4; }
-        }
+        @keyframes slowBreathe { 0%, 100% { opacity: 1; } 50% { opacity: 0.4; } }
 
+        /* Re-emphasized Scores and Teams */
         .score-row {
             display: flex;
             align-items: center;
@@ -104,56 +111,63 @@
             gap: 15px;
         }
 
-        .team-name { font-weight: 800; font-size: 1.4rem; color: #111; flex: 1; line-height: 1.1; }
+        .team-name { 
+            font-family: 'Inter', sans-serif;
+            font-weight: 800; 
+            font-size: 1.5rem; /* Larger team names */
+            color: #000; 
+            flex: 1; 
+            line-height: 1.1; 
+        }
         .team-name.home { text-align: right; }
 
         .score-pod {
             background: var(--witham-gold);
             color: var(--witham-black);
             font-family: 'Montserrat', sans-serif;
-            font-size: 2rem;
+            font-size: 2.2rem; /* Larger scores */
             font-weight: 900;
-            padding: 5px 20px;
+            padding: 6px 22px;
             border-radius: 50px;
-            min-width: 85px;
+            min-width: 90px;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
 
+        /* Re-emphasized Footer Status */
         .status-footer { 
-            font-size: 1rem; font-weight: 800; text-align: center; 
-            margin-top: 15px; color: #444; text-transform: uppercase;
+            font-size: 1.1rem; /* Larger footer text */
+            font-weight: 800; 
+            text-align: center; 
+            margin-top: 18px; 
+            color: #333; 
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
-        /* SIMPLIFIED WEATHER WIDGET */
+        /* Weather Widget Styling */
         .weather-card {
             background: white;
-            color: var(--witham-black);
             border-radius: 12px;
-            padding: 20px;
+            padding: 25px;
             text-align: center;
             box-shadow: 0 6px 15px rgba(0,0,0,0.04);
             border: 1px solid #eee;
         }
-        .weather-main { display: flex; align-items: center; justify-content: center; gap: 10px; margin: 10px 0; }
-        .weather-temp { font-size: 3rem; font-weight: 900; font-family: 'Montserrat'; }
-        .weather-icon { font-size: 3rem; }
-        .weather-desc { font-weight: 800; text-transform: uppercase; font-size: 1rem; color: #555; display: block; }
+        .weather-main { display: flex; align-items: center; justify-content: center; gap: 12px; margin: 12px 0; }
+        .weather-temp { font-size: 3.2rem; font-weight: 900; font-family: 'Montserrat'; }
+        .weather-icon { font-size: 3.2rem; }
+        .weather-desc { font-weight: 800; text-transform: uppercase; font-size: 1.1rem; color: #444; }
         .weather-details { 
-            display: flex; 
-            justify-content: center; 
-            gap: 15px;
-            margin-top: 10px; 
-            padding-top: 10px; 
-            border-top: 1px solid #f0f0f0; 
-            font-size: 0.85rem; 
-            font-weight: 700;
-            color: #777;
+            display: flex; justify-content: center; gap: 15px;
+            margin-top: 12px; padding-top: 12px; border-top: 1px solid #f0f0f0; 
+            font-size: 0.9rem; font-weight: 700; color: #666;
         }
 
         .widget { background: white; border-radius: 12px; padding: 20px; margin-bottom: 25px; box-shadow: 0 6px 15px rgba(0,0,0,0.04); }
         
         .carousel-container {
-            width: 100%; height: 300px;
+            width: 100%; height: 320px;
             position: relative; border-radius: 8px;
             overflow: hidden; background: #eee;
         }
@@ -164,12 +178,7 @@
             display: flex; align-items: flex-end;
         }
         .carousel-slide.active { opacity: 1; }
-        .slide-caption { background: rgba(0,0,0,0.7); color: white; padding: 12px; width: 100%; text-align: center; font-weight: 600; font-size: 0.9rem; }
-
-        @media (max-width: 1200px) {
-            .main-container { grid-template-columns: 1fr; }
-            header { flex-direction: column; text-align: center; padding: 20px; }
-        }
+        .slide-caption { background: rgba(0,0,0,0.7); color: white; padding: 12px; width: 100%; text-align: center; font-weight: 600; font-size: 1rem; }
     </style>
 </head>
 <body>
@@ -201,9 +210,7 @@
     <div class="column">
         <div class="column-title"><h2>Weather</h2></div>
         <div id="weather-container">
-            <div class="weather-card">
-                <div class="weather-loc">Checking Witham sky...</div>
-            </div>
+            <div class="weather-card"><div class="weather-desc">Reading the sky...</div></div>
         </div>
 
         <div class="widget" style="margin-top: 25px;">
@@ -212,8 +219,8 @@
                 <div class="carousel-slide active" style="background-image: url('https://raw.githubusercontent.com/KilobyteGamer/WHC-Results/refs/heads/main/WHC_Eagle.png'); background-color: #fff;">
                     <div class="slide-caption">Welcome to Witham Hockey Club</div>
                 </div>
-                <div class="carousel-slide" style="background-image: url('https://via.placeholder.com/400x300/ffc000/000000?text=Quiz+Night');">
-                    <div class="slide-caption">Next Social Event: Quiz Night</div>
+                <div class="carousel-slide" style="background-image: url('https://via.placeholder.com/400x300/ffc000/000000?text=Match+Day+Tea');">
+                    <div class="slide-caption">Kitchen Serving from 11:30 AM</div>
                 </div>
             </div>
         </div>
@@ -223,17 +230,14 @@
 <script>
     const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbycpvfVi8Yd3Us0Fp84SON-wyxN0NL6b_3adE-cnYoomk0Cb0IsuPt2tF9RjdScB_TN/exec';
 
-    // 1. IMPROVED WEATHER LOGIC
+    // WEATHER LOGIC
     function getWeatherIcon(code) {
-        // WMO Weather interpretation codes
-        if (code === 0) return '☀️'; // Clear sky
-        if (code <= 3) return '⛅';  // Partly cloudy
-        if (code <= 48) return '☁️'; // Fog/Cloudy
-        if (code <= 67) return '🌧️'; // Rain/Drizzle
-        if (code <= 77) return '❄️'; // Snow
-        if (code <= 82) return '🌦️'; // Showers
-        if (code <= 99) return '⛈️'; // Thunderstorm
-        return '☁️';
+        if (code === 0) return '☀️';
+        if (code <= 3) return '⛅';
+        if (code <= 48) return '☁️';
+        if (code <= 67) return '🌧️';
+        if (code <= 82) return '🌦️';
+        return '⛈️';
     }
 
     function getWeatherDesc(code) {
@@ -250,9 +254,7 @@
             const response = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=51.8033&longitude=0.6386&current_weather=true&timezone=Europe%2FLondon`);
             const data = await response.json();
             const w = data.current_weather;
-            
-            const container = document.getElementById('weather-container');
-            container.innerHTML = `
+            document.getElementById('weather-container').innerHTML = `
                 <div class="weather-card">
                     <span class="weather-desc">${getWeatherDesc(w.weathercode)}</span>
                     <div class="weather-main">
@@ -260,18 +262,18 @@
                         <span class="weather-temp">${Math.round(w.temperature)}°C</span>
                     </div>
                     <div class="weather-details">
-                        <span>Wind: ${Math.round(w.windspeed * 0.621371)} mph</span>
+                        <span>Wind: ${Math.round(w.windspeed * 0.621)} mph</span>
                         <span>|</span>
                         <span>Witham, Essex</span>
                     </div>
                 </div>
             `;
-        } catch (e) { console.error("Weather update failed", e); }
+        } catch (e) { console.error(e); }
     }
     updateWeather();
     setInterval(updateWeather, 600000);
 
-    // 2. CAROUSEL LOGIC
+    // CAROUSEL
     let currentSlide = 0;
     function rotateCarousel() {
         const slides = document.querySelectorAll('.carousel-slide');
@@ -282,16 +284,15 @@
     }
     setInterval(rotateCarousel, 5000);
 
-    // 3. CLOCK LOGIC
+    // CLOCK
     function updateDateTime() {
         const now = new Date();
         document.getElementById('clock').textContent = now.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
         document.getElementById('date').textContent = now.toLocaleDateString([], {weekday: 'long', day: 'numeric', month: 'short'});
     }
-    setInterval(updateDateTime, 1000); 
-    updateDateTime();
+    setInterval(updateDateTime, 1000); updateDateTime();
 
-    // 4. DATA LOGIC
+    // DATA FETCH
     function handleData(data) {
         const mens = document.getElementById('mens-scores');
         const ladies = document.getElementById('ladies-scores');
@@ -299,18 +300,15 @@
 
         for (let col = 0; col < 7; col++) {
             if (data[0][col] !== true && data[0][col] !== "TRUE") continue;
-
             const [pb, status, team1, team2, s1, s2, div] = [data[1][col], data[2][col], data[3][col], data[4][col], data[5][col] ?? '0', data[6][col] ?? '0', data[7][col]];
             const isLadies = team1.toLowerCase().includes(' l') || team1.includes('Ladies');
-
             let isPlaying = false;
             if (status === "TBD") {
                 const now = new Date();
                 const [hrs, mins] = pb.split(':');
-                const matchTime = new Date(); matchTime.setHours(hrs, mins, 0);
-                if (now >= matchTime && now <= new Date(matchTime.getTime() + 90*60000)) isPlaying = true;
+                const mt = new Date(); mt.setHours(hrs, mins, 0);
+                if (now >= mt && now <= new Date(mt.getTime() + 5400000)) isPlaying = true;
             }
-
             const card = document.createElement('div');
             card.className = 'card';
             card.innerHTML = `
@@ -330,12 +328,11 @@
     }
 
     function refreshData() {
-        const script = document.createElement('script');
-        script.src = `${WEB_APP_URL}?callback=handleData&ts=${Date.now()}`;
-        document.body.appendChild(script);
+        const s = document.createElement('script');
+        s.src = `${WEB_APP_URL}?callback=handleData&ts=${Date.now()}`;
+        document.body.appendChild(s);
     }
-    refreshData(); 
-    setInterval(refreshData, 60000);
+    refreshData(); setInterval(refreshData, 60000);
 </script>
 </body>
 </html>
